# SdvxOnEar

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
document/: vendor-ffmpeg-libopus.md
src/: common.rs  main.rs  music_db.rs  packer.rs  scan.rs  tool.rs  transcode.rs
